# This file if part of the llir-opt project.
# Licensing information can be found in the LICENSE file.
# (C) 2018 Nandor Licker. All rights reserved.

add_subdirectory(llir-as)
add_subdirectory(llir-ar)
add_subdirectory(llir-dump)
add_subdirectory(llir-ld)
add_subdirectory(llir-opt)
add_subdirectory(llir-objcopy)
add_subdirectory(llir-ranlib)
add_subdirectory(llir-reducer)
add_subdirectory(llir-strip)
add_subdirectory(llir-size)

